--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 GOOGLE_CALLBACK_URL=
 
+FACEBOOK_APP_ID=
+FACEBOOK_APP_SECRET=
+FACEBOOK_CALLBACK_URL=
+
 APP_SECRET=
 
 MONGODB_URL=
