add GitHub login

--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,14 @@ FACEBOOK_APP_ID=
 FACEBOOK_APP_SECRET=
 FACEBOOK_CALLBACK_URL=
 
+LINE_CHANNEL_ID=
+LINE_CHANNEL_SECRET=
+LINE_CALLBACK_URL=
+
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
+GITHUB_CALLBACK_URL=
+
 APP_SECRET=
 
 MONGODB_URL=
