prepare for Twitter, not done yet

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,10 @@ GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
 GITHUB_CALLBACK_URL=
 
+TWITTER_CONSUMER_KEY=
+TWITTER_CONSUMER_SECRET=
+TWITTER_CALLBACK_URL=
+
 APP_SECRET=
 
 MONGODB_URL=
